syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC";

package SecurityLogin;

import "google/protobuf/timestamp.proto";

service SecurityLogin{


rpc GetSecurityLogin(IdRequestSecurityLogin) returns (SecurityLoginReply);
rpc CreateSecurityLogin(IdRequestSecurityLogin) returns (SecurityLoginReply);
rpc UpdateSecurityLogin(IdRequestSecurityLogin) returns (SecurityLoginReply);
rpc DeleteSecurityLogin(IdRequestSecurityLogin) returns (SecurityLoginReply);

}

message IdRequestSecurityLogin {
	string Id=1;
}

message SecurityLoginReply{
	string Id=1;
	string Login = 2;
	string Password = 3;
	google.protobuf.Timestamp Created = 4; 
	google.protobuf.Timestamp PasswordUpdate = 5;
	google.protobuf.Timestamp AgreementAccepted = 6;
	bool IsLocked = 7 ;
	bool IsInactive = 8;
	string EmailAddress = 9;
	string PhoneNumber = 10;
	string FullName = 11;
	bool ForceChangePassword = 12;
	string PrefferredLanguage = 13;
}


